# kleinanzeigen-wohnungs-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.portainer.yml  docker-compose.registry.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: availability.py  config.py  filters.py  health.py  main.py  mcp_server.py  models.py  notify.py  results.py  runlog.py  searches.py  sources.py  store.py
docs/: CONTAINER.md
tests/: conftest.py  test_availability.py  test_config.py  test_enrich.py  test_filters.py  test_health.py  test_main.py  test_mcp.py  test_models.py  test_notify.py  test_results.py  test_runlog.py  test_searches.py  test_sources.py  test_store.py
tests/fixtures/: kleinanzeigen_detail.html  kleinanzeigen_search.html
